[package]
name = "icm20948-async"
version = "0.1.1"
edition = "2021"
authors = ["Peter Krull"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
align-mag = []

[dependencies]
embedded-hal-async = "1.0.0-rc.1"
nalgebra = {version = "0.32", default-features = false, features = ["libm"]}

defmt = "0.3"
defmt-rtt = "0.4"